# CQtDeployerServer

./: .gitmodules  CMakeLists.txt  README.md  doxygen.conf  init.sh
Deploy/: CQtDeployerServer.json
docs/: serverimplmodel.qmodel
src/: CMakeLists.txt
src/Protockol/: CMakeLists.txt
src/Protockol/src/: CQtProtockol_global.h  cqtprotockol.cpp  cqtprotockol.h
src/Server/: CMakeLists.txt
src/Server/src/: CQtServer.cpp  hostconfiguration.cpp  iconfiguration.cpp  idistributor.cpp  idistributor.h  server.cpp
src/Server/src/Private/: config.h
src/ServerStart/: CMakeLists.txt
src/ServerStart/src/: main.cpp
tests/: CMakeLists.txt  tstMain.cpp
tests/units/: exampletest.cpp  test.cpp  testutils.cpp
